feat: add courses
